# Scrapify-Swift-Bridge

./: .gitignore  CMakeLists.txt  Package.swift  index.d.ts  index.js  package-lock.json  package.json
Sources/: Bridge.swift
bridge/: bridge.cpp
